# fileorama

./: Cargo.toml  LICENSE  README.md
.github/: rust.yml
src/: ftp_fs.rs  lib.rs  local_fs.rs  zip_fs.rs
